# greptimedb

./: .coderabbit.yaml  .dockerignore  .editorconfig  .env.example  .envrc  .gitignore  .licenserc.yaml  .pre-commit-config.yaml  AGENTS.md  AUTHOR.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE  LICENSE-ENTERPRISE  Makefile  README.md  SECURITY.md  check-snafu.py  chore.md  cliff.toml  codecov.yml  collector.rs  crates.js  feed.py  flake.nix  flow.ans  help.html  impl-note.md  index.html  ingester.toml  licenserc-enterprise.toml  licenserc.toml  pr-7931-body.md  py_time_poc.md  remote-dyn-filter-rfc.md  remote-dyn-filter-task-01-wire-abi.md  remote-dyn-filter-task-02-region-rpc.md  (+34 more)
benchmarks/: Cargo.toml  README.md
benchmarks/config/: wal_bench.example.toml
benchmarks/src/: lib.rs  metrics.rs  wal.rs  wal_bench.rs
src/api/: Cargo.toml  build.rs  error.rs.html  helper.rs.html  lib.rs.html  region.rs.html  v1.rs.html
src/api/src/: column_def.rs  convert.rs  error.rs  helper.rs  lib.rs  prometheus.rs  region.rs  result.rs  serde.rs  v1.rs
src/api/v1/: helper.rs.html  (+1 more)
src/auth/: Cargo.toml  common.rs.html  error.rs.html  lib.rs.html  permission.rs.html  user_info.rs.html  user_provider.rs.html
src/cache/: Cargo.toml  error.rs.html  lib.rs.html
src/catalog/: Cargo.toml  error.rs.html  information_extension.rs.html  information_schema.rs.html  kvbackend.rs.html  lib.rs.html  memory.rs.html  metrics.rs.html  process_manager.rs.html  system_schema.rs.html  table_source.rs.html
src/cli/: Cargo.toml  bench.rs.html  cmd.rs.html  common.rs.html  data.rs.html  database.rs.html  error.rs.html  export.rs.html  helper.rs.html  import.rs.html  lib.rs.html  meta_snapshot.rs.html  metadata.rs.html  repl.rs.html  utils.rs.html
src/client/: Cargo.toml  client.rs.html  client_manager.rs.html  database.rs.html  error.rs.html  flight.rs.html  flow.rs.html  inserter.rs.html  lib.rs.html  load_balance.rs.html  metrics.rs.html  region.rs.html  stream_insert.rs.html
src/cmd/: Cargo.toml  build.rs  cli.rs.html  datanode.rs.html  error.rs.html  flownode.rs.html  frontend.rs.html  lib.rs.html  metasrv.rs.html  options.rs.html  standalone.rs.html  user.rs.html
src/dataflow/: Cargo.toml
src/datanode/: Cargo.toml  alive_keeper.rs.html  config.rs.html  datanode.rs.html  error.rs.html  event_listener.rs.html  greptimedb_telemetry.rs.html  heartbeat.rs.html  lib.rs.html  metrics.rs.html  partition_expr_fetcher.rs.html  query_stream.rs.html  region_server.rs.html  service.rs.html  store.rs.html  utils.rs.html
src/datanode-options/: Cargo.toml
src/datatypes/: Cargo.toml  arrow_array.rs.html  data_type.rs.html  duration.rs.html  error.rs.html  extension.rs.html  interval.rs.html  json.rs.html  lib.rs.html  macros.rs.html  prelude.rs.html  scalars.rs.html  schema.rs.html  serialize.rs.html  time.rs.html  timestamp.rs.html  type_id.rs.html  types.rs.html  value.rs.html  vectors.rs.html
src/file-engine/: Cargo.toml
src/file-table-engine/: Cargo.toml
src/flow/: AGENTS.md  Cargo.toml  adapter.rs.html  batching_mode.rs.html  clippy.toml  compute.rs.html  df_optimizer.rs.html  engine.rs.html  error.rs.html  expr.rs.html  heartbeat.rs.html  lib.rs.html  metrics.rs.html  plan.rs.html  recording_rules.rs.html  repr.rs.html  server.rs.html  transform.rs.html  utils.rs.html
src/frontend/: AGENTS.md  Cargo.toml  error.rs.html  events.rs.html  frontend.rs.html  heartbeat.rs.html  instance.rs.html  lib.rs.html  limiter.rs.html  metrics.rs.html  script.rs.html  server.rs.html  service_config.rs.html  slow_query_recorder.rs.html  stream_wrapper.rs.html
src/index/: Cargo.toml  bitmap.rs.html  bloom_filter.rs.html  error.rs.html  external_provider.rs.html  fulltext_index.rs.html  inverted_index.rs.html  lib.rs.html  target.rs.html
src/ingester/: Cargo.toml
src/log-store/: Cargo.toml  build.rs  test.parquet
src/meta-client/: Cargo.toml
src/meta-srv/: AGENTS.md  Cargo.toml  build.rs
src/metric-engine/: AGENTS.md  Cargo.toml
src/mito/: Cargo.toml  README.md
src/mito-codec/: Cargo.toml
src/mito2/: AGENTS.md  Cargo.toml  README.md  access_layer.rs.html  batch_size.rs.html  cache.rs.html  compaction.rs.html  config.rs.html  engine.rs.html  error.rs.html  flush.rs.html  gc.rs.html  lib.rs.html  manifest.rs.html  memtable.rs.html  metrics.rs.html  read.rs.html  region.rs.html  region_write_ctx.rs.html  remap_manifest.rs.html  request.rs.html  row_converter.rs.html  schedule.rs.html  sst.rs.html  time_provider.rs.html  wal.rs.html  worker.rs.html
src/object-store/: Cargo.toml
tests-chaos/: Cargo.toml
tests-chaos/conf/: standalone-v0.3.2.toml.template
tests-chaos/src/: bare.rs  error.rs  main.rs  utils.rs
tests-fuzz/: Cargo.toml  README.md
tests-fuzz/conf/: standalone.template.toml
tests-fuzz/src/: context.rs  error.rs  executor.rs  fake.rs  generator.rs  ir.rs  lib.rs  test_utils.rs  translator.rs  utils.rs  validator.rs
tests-fuzz/targets/: fuzz_alter_logical_table.rs  fuzz_alter_table.rs  fuzz_concurr_alter_table.rs  fuzz_concurr_prom_remote_write.rs  fuzz_create_database.rs  fuzz_create_logical_table.rs  fuzz_create_table.rs  fuzz_delete.rs  fuzz_insert.rs  fuzz_insert_logical_table.rs
tests-fuzz/tests/: main.rs
tests-fuzz/utils/: README.md  kafka_wal_helper.rs
tests-integration/: Cargo.toml  README.md  pr.patch
tests-integration/etcd-tls-certs/: client-key.pem  server.crt
tests-integration/fixtures/: docker-compose.yml
tests-integration/resources/: jsonbench-head-10.ndjson  jsonbench-select-all.txt
tests-integration/src/: cache.rs  catalog.rs  cluster.rs  database.rs  grpc.rs  influxdb.rs  instance.rs  lib.rs  opentsdb.rs  otlp.rs  prom_store.rs  prometheus.rs  standalone.rs  stream_insert.rs  table.rs  test_util.rs  tests.rs
tests-integration/tests/: database_ddl_events.rs  flow_ddl_event.rs  grpc.rs  http.rs  json2.rs  jsonbench.rs  main.rs  mysql.rs  region_failover.rs  region_migration.rs  repartition.rs  repartition_expr_version.rs  repartition_rule_version.rs  sql.rs  table_ddl_events.rs  view_procedure_events.rs  wal.rs
(+80980 files in other folders)
