[package]
name = "benchmarks"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arrow.workspace = true
chrono.workspace = true
clap.workspace = true
client.workspace = true
futures-util.workspace = true
indicatif = "0.17.1"
itertools.workspace = true
parquet.workspace = true
tokio.workspace = true
