[package]
name = "tests-chaos"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum-macros = "0.3.8"
axum.workspace = true
common-error.workspace = true
common-macro.workspace = true
common-telemetry.workspace = true
common-time = { workspace = true }
lazy_static.workspace = true
mysql = "25.0"
nix = { version = "0.26", features = ["process"] }
prometheus.workspace = true
rand = { workspace = true }
rand_chacha = "0.3.1"
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
sqlx = { version = "0.6", features = [
    "runtime-tokio-rustls",
    "mysql",
    "postgres",
    "chrono",
] }
tests-fuzz.workspace = true
tinytemplate = "1.2"
tokio.workspace = true
